omnibox: make decorations non-focusable for now

The key view loop is messed up for these decorations, as described in
https://crbug.com/623883, so let's make them non-focusable pending a real fix.

BUG=623883

Review-Url: https://codereview.chromium.org/2155233002
Cr-Commit-Position: refs/heads/master@{#406376}

Former-commit-id: bd2ba8d0939223348e7b01d5c0398fde744fb72f